Laying out most elements, adding CSS.

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,6 +6,7 @@ light blue: #1c5380
 
 body {
   margin: 0;
+  color: #252525;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-image: url('../images/bgtile.png');
   background-repeat: repeat no-repeat;
@@ -15,11 +16,10 @@ body {
 main {
   margin: 90px auto;
   max-width: 860px;
-  background-color: pink;
   display: grid;
   grid-template-columns: 318px auto;
-  grid-template-rows: 150px auto auto;
-  grid-gap: 0 50px;
+  grid-template-rows: 113px auto auto;
+  grid-gap: 0 40px;
 }
 
 .phones-img {
@@ -30,13 +30,24 @@ main {
 header {
   top: 0px;
   right: 0px;
-  background-color: cyan;
   grid-row-start: 1;
   grid-row-end: 1;
 }
 
+header nav {
+  top: 20px;
+  width: 100%;
+  height: auto;
+  position: relative;
+}
+
 .btn-home {
-	
+  padding: 6px 14px;
+  top: 50%;
+  right: 0;
+  transform: translate(0%, -50%);
+  position: absolute;
+  /* height: 40px; */
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #799ebc), color-stop(1, #3d719a));
 	background:-moz-linear-gradient(top, #799ebc 5%, #3d719a 100%);
 	background:-webkit-linear-gradient(top, #78799ebc92c2 5%, #3d719a 100%);
@@ -54,19 +65,19 @@ header {
 	color:#ffffff;
 	font-family:Arial;
 	font-size:19px;
-	padding:12px 37px;
+	/* padding:12px 37px; */
 	text-decoration:none;
 	text-shadow:0px 1px 0px #283966;
 }
 .btn-home:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
-	background:-moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-	background:-webkit-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-	background:-o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-	background:-ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
-	background-color:#476e9e;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #3d719a), color-stop(1, #799ebc));
+	background:-moz-linear-gradient(top, #3d719a 5%, #799ebc 100%);
+	background:-webkit-linear-gradient(top, #3d719a 5%, #799ebc 100%);
+	background:-o-linear-gradient(top, #3d719a 5%, #799ebc 100%);
+	background:-ms-linear-gradient(top, #3d719a 5%, #799ebc 100%);
+	background:linear-gradient(to bottom, #3d719a 5%, #799ebc 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#799ebc',GradientType=0);
+	background-color:#3d719a;
 }
 .btn-home:active {
 	position:relative;
@@ -74,23 +85,38 @@ header {
 }
 
 section {
-  background-color: red;
+  /* background-color: red; */
 }
 
-aside {
-  background-color: blue;
+.text-blurb {
+  background-image: url('../images/frame.png');
+  background-repeat: repeat no-repeat;
+  padding: 40px;
+}
+
+.text-blurb h1 {
+  margin: 0 170px 0 0;
+  color: #073760;
 }
 
 footer {
   grid-column-start: 1;
   grid-column-end: 3;
+  text-align: center;
+  text-transform: uppercase;
+  color: #a4a4a5;
+  font-size: .8em;
 }
-
 
 footer ul li {
   list-style-type: none;
   display: inline;
+  padding: 0 10px;
+}
 
+footer a {
+  color: #1c5380;
+  text-decoration: none;
 }
 
 .decorative-frame {
@@ -99,7 +125,4 @@ footer ul li {
   position: absolute;
   top: 0px;
   z-index: -99;
-  
 }
-
-
