--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -16,15 +16,16 @@ body {
 main {
   margin: 90px auto;
   max-width: 860px;
+  position: relative;
   display: grid;
   grid-template-columns: 318px auto;
-  grid-template-rows: 113px auto auto;
+  grid-template-rows: 113px auto auto auto;
   grid-gap: 0 40px;
 }
 
-.phones-img {
+.two-phones {
   grid-row-start: 1;
-  grid-row-end: 3;
+  grid-row-end: 4;
 }
 
 header {
@@ -42,7 +43,9 @@ header nav {
 }
 
 .btn-home {
-  padding: 6px 14px;
+  margin: 0;
+  padding: 0;
+  padding: 6px 14px 12px;
   top: 50%;
   right: 0;
   transform: translate(0%, -50%);
@@ -67,8 +70,10 @@ header nav {
 	font-size:19px;
 	/* padding:12px 37px; */
 	text-decoration:none;
-	text-shadow:0px 1px 0px #283966;
+  text-shadow:0px 1px 0px #283966;
+  font-size: .9em;
 }
+
 .btn-home:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #3d719a), color-stop(1, #799ebc));
 	background:-moz-linear-gradient(top, #3d719a 5%, #799ebc 100%);
@@ -79,44 +84,76 @@ header nav {
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#799ebc',GradientType=0);
 	background-color:#3d719a;
 }
+
 .btn-home:active {
 	position:relative;
 	top:1px;
 }
 
-section {
-  /* background-color: red; */
+.btn-home img {
+  width: 25px;
+  margin: -3px;
+  padding-top: 5px;
+  padding: 5px 6px 0 0;
+  bottom: 0;
+  position: relative;
 }
 
 .text-blurb {
+  padding: 40px 40px 0 40px;
   background-image: url('../images/frame.png');
   background-repeat: repeat no-repeat;
-  padding: 40px;
 }
 
 .text-blurb h1 {
-  margin: 0 170px 0 0;
+  margin: 0 180px 0 0;
   color: #073760;
+  font-size: 1.5em;
+}
+
+.text-blurb p {
+  font-size: 1em;
+}
+
+.emphasis {
+  font-weight: bold;
+}
+
+.store-btns {
+  padding: 0 40px;
+  position: relative;
+}
+
+.store-btns img {
+  margin: 20px 0;
+  padding-right: 15px;
+  bottom: 0;
 }
 
 footer {
+  margin-top: 20px;
   grid-column-start: 1;
   grid-column-end: 3;
   text-align: center;
   text-transform: uppercase;
   color: #a4a4a5;
-  font-size: .8em;
+  font-size: .7em;
+  font-weight: bold;
 }
 
 footer ul li {
   list-style-type: none;
   display: inline;
-  padding: 0 10px;
+  padding: 0 6px;
 }
 
 footer a {
   color: #1c5380;
   text-decoration: none;
+}
+
+.copyright {
+  padding-left: 25px;
 }
 
 .decorative-frame {
@@ -125,4 +162,9 @@ footer a {
   position: absolute;
   top: 0px;
   z-index: -99;
+  background: rgb(79,124,161); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(79,124,161,1) 0%, rgba(54,98,135,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(79,124,161,1) 0%,rgba(54,98,135,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(79,124,161,1) 0%,rgba(54,98,135,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f7ca1', endColorstr='#366287',GradientType=0 ); /* IE6-9 */
 }
