--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,10 @@ footer a {
   text-decoration: none;
 }
 
+footer a:hover {
+  text-decoration: underline;
+}
+
 .copyright {
   padding-left: 25px;
 }
